# battlesnake-wasm-eval-tester

./: LICENSE  README.md  index.html
fuzz-tests/: 01.board.json  01.moves.json  01.results.json  02.board.json  02.moves.json  03.board.json  03.moves.json  03.results.json  04.board.json  04.moves.json  04.results.json  05.board.json  05.moves.json  06.board.json  06.moves.json  06.results.json
official-go-wasm/: build.sh  go.mod  go.sum  main.go
rust-wasm/: Cargo.toml  build.sh
rust-wasm/src/: lib.rs
wasm/: official.js  official.wasm
wasm/rust/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
wasm/rust-before-change/: rust_wasm.d.ts  rust_wasm_bg.wasm
wasm_tester/: .gitignore  index.html  index.js  package.json
