[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# battlesnake-game-types = { git = "https://github.com/coreyja/battlesnake-game-types.git", branch = "ca/main/replace-evaluate" }
battlesnake-game-types = { path = "../../battlesnake-game-types" }
serde = "1.0.130"
serde_json = "1.0.68"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.10.1"
rand = "0.8.4"

